# library-management-system

./: CMakeLists.txt  README.md  addBook.c  addBook.h  addStudent.c  addStudent.h  additionalFunctions.c  additionalFunctions.h  adminstration.c  adminstration.h  books.csv  borrowBook.c  borrowBook.h  libraryStructure.h  main.c  menu.c  menu.h  removeBook.c  removeBook.h  returnBook.c  returnBook.h  searchBook.c  searchBook.h  students.csv  test.c
